Add VerifySmsOtp rpc (#15)
